feat: support video input chunks and enable qwen2 vl to process video
